# lineage-wiki

./: .gitignore  README.md  pyproject.toml  spec.md
chains/: example.yml  gold-pnl.yml
docs/: pilot-runbook.md  review_llmuse.md
docs/plans/: 2026-07-06-component-generation-design.md  2026-07-06-multi-chain-manifest-design.md  2026-07-06-multi-chain-manifest.md  2026-07-10-p1-review-fixes-design.md  2026-07-10-p1-review-fixes.md
lineage_wiki/: __init__.py  cli.py  config.py  constants.py  credentials.py  examples.py  github_action.py  providers.py  util.py
lineage_wiki/agent/: __init__.py  grounding.py  llm_pipeline.py  planner.py  prompts.py  runner.py
lineage_wiki/connectors/: __init__.py  bigquery_connector.py  local_repo_connector.py  raw_doc_connector.py  slack_connector.py
lineage_wiki/ingestion/: __init__.py  bq_formula_verifier.py  bq_profiler.py  code_indexer.py  evidence.py  fingerprints.py  git_context.py  source_loader.py
lineage_wiki/okf/: __init__.py  indexes.py  schemas.py  sections.py  templates.py  validator.py  verifier.py
lineage_wiki/storage/: __init__.py  manifest.py  runs.py  snapshots.py
tests/: conftest.py  test_agents_md.py  test_atomic_writes.py  test_bigquery.py  test_cli.py  test_config.py  test_dry_run.py  test_formula_checks.py  test_github_action.py  test_indexes.py  test_ingestion.py  test_llm.py  test_llm_invalidation.py  test_manifest.py  test_plan_only.py  test_reference_repo.py  test_schemas.py  test_slack.py  test_snapshots.py  test_templates.py  test_update.py  test_validator.py  test_verify_bq.py
(+19 files in other folders)
